samples/_failures_safe/1761129512_fe6de9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2942a8b3.c: In function ‘main’:
./samples/SAFE/__tmp_2942a8b3.c:154:13: error: expected expression at end of input
  154 |             case
      |             ^~~~
./samples/SAFE/__tmp_2942a8b3.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2942a8b3.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2942a8b3.c:154:13: error: expected declaration or statement at end of input
